1、优化request/response数据结构 2、剔除数据驱动废弃方法